--- a/css-demo/assets/css/style.css
+++ b/css-demo/assets/css/style.css
@@ -1,6 +1,5 @@
 /* ---- CSS Demo ---- */
 
-
 /*  ---------------Box Sizing-----------------  */
 
 html {
@@ -12,7 +11,73 @@ html {
   box-sizing: inherit;
 }
 
-/*----------------Global Styles ------------------*/
- body{
 
- }
+/*----------------Global Styles ------------------*/
+
+body{
+font-family: "Montserrat", sans-serif;
+margin:0;  
+}
+
+header.primary{
+background-color:#3b8b62;
+text-align:center;
+text-shadow: 2px 2px #000000;  
+color:#ffffff;
+/*Single value short hand*/
+padding: 40px;  
+/*long form*/
+padding-top: 40px;
+padding-right: 40px;
+padding-bottom: 40px;
+padding-left: 40px;  
+/* T,R,B,L */
+padding: 20px 40px 20px 40px;  
+/* Two Value Top/Bottom / L/R */
+padding: 20px 40px;  
+}
+
+header.primary h1{
+font-size: 2.4rem;
+margin:20px 0 0 0;  
+}
+
+header.primary h1 a{
+  color:#ffffff;
+  text-decoration:none;
+}
+
+header.primary h2{
+font-size: 1.4rem;
+letter-spacing:.2px; 
+margin:10px 0 0 0;  
+}
+
+header.primary nav ul{
+  padding:0;
+  display:flex;
+  flex-direction:row;
+  justify-content:space-around;
+  margin:20px 0 10px 0;
+}
+
+header.primary nav ul li{
+  list-style-type:none;
+}
+
+header.primary nav ul a{
+  color:#ffffff;
+  padding:5px 7.5px;
+  border-radius:20px;
+  text-decoration:none;
+  background-color:#000000;
+  background-color:rgba(0,0,0,.4);
+  font-size:.9rem;
+  transition:.4s;
+}
+
+header.primary nav a:hover{
+  background-color:rgba(0,0,0,.8);
+}
+
+
